src/types/tests/snapshots/tgbot__types__tests__message__delete_messages.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "chat_id": 1,
  "message_ids": [
    2
  ]
}
