src/types/tests/snapshots/tgbot__types__tests__message__direct_messages_topic.snap
---
source: src/types/tests/message.rs
expression: expected_struct.clone()
---
{
  "chat": {
    "type": "supergroup",
    "id": 1,
    "title": "Chat"
  },
  "date": 1,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "direct_messages_topic": {
    "topic_id": 1
  }
}
