src/types/tests/snapshots/tgbot__types__tests__message__document-2.snap
---
source: src/types/tests/message.rs
expression: expected_struct
---
{
  "chat": {
    "type": "supergroup",
    "id": 1,
    "title": "Chat"
  },
  "date": 1,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "document": {
    "file_id": "file-id",
    "file_unique_id": "unique-id"
  },
  "caption": "test document caption",
  "caption_entities": [
    {
      "offset": 0,
      "length": 4,
      "type": "bold"
    }
  ]
}
