src/types/tests/snapshots/tgbot__types__tests__message__edit_message_caption-2.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "business_connection_id": "c-id",
  "caption": "caption",
  "chat_id": 1,
  "message_id": 2,
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "text",
          "url": "url"
        }
      ]
    ]
  },
  "show_caption_above_media": true
}
