src/types/tests/snapshots/tgbot__types__tests__message__edit_message_caption-4.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "caption_entities": [
    {
      "length": 10,
      "offset": 0,
      "type": "bold"
    }
  ],
  "inline_message_id": "msg-id"
}
