src/types/tests/snapshots/tgbot__types__tests__message__edit_message_caption.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "chat_id": 1,
  "message_id": 2
}
